objects/Con_Log__c.object
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Used for Email Template.  Should be hidden from Page Layout.</description>
        <formula>Opportunity__r.Name</formula>
        <inlineHelpText>Used for Email Template.  Should be hidden from Page Layout.</inlineHelpText>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Con Logs</relationshipLabel>
        <relationshipName>Con_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selected_Users__c</fullName>
        <label>Selected Users</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Con Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <columns>Notes__c</columns>
        <columns>Selected_Users__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ConLog-{0}</displayFormat>
        <label>Con Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Con Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>